@@ -1,3 +1,9 @@
+2008-01-15  Neal H. Walfield  <neal@gnu.org>
+
+	* rpc.h (RPC_REPLY_): New macro.
+	(RPC_SIMPLE): Generate reply stubs.
+	(RPC): Likewise.
+
 2008-01-04  Neal H. Walfield  <neal@gnu.org>
 
 	* cap.h (OID_FMT): Prefix OID value with 0x.
